Add Rust magic/shop systems and continue Java modernization
Rust:
- Add magic.rs: Full spellcasting system with 30+ spells
  - Combat spells (strikes, bolts, blasts, waves)
  - Teleport spells with destinations
  - Alchemy and utility spells
  - MagicState for cooldowns and god charge
- Add shop.rs: NPC vendor system
  - Shop inventory with dynamic pricing
  - Automatic restocking system
  - General store and specialty shop support
  - Default shops for common locations

Java modernization (String.formatted() and instanceof pattern matching):
- PrayerHandler.java: Use String.formatted()
- SpellHandler.java: Use instanceof pattern matching
- PlayerTradeHandler.java: Use String.formatted()
- StringUtil.java: Use var and String.formatted()
- SecurityUtils.java: Use var and String.formatted()